--- a/public/config.json
+++ b/public/config.json
@@ -235,96 +235,7 @@
         "is_pol": false
       }
     },
-    "pairs": [
-      {
-        "max_duration": "04:00",
-        "min_duration": "00:01",
-        "max_utilization": 200,
-        "category": "Crypto",
-        "tv_id": "BTCUSD",
-        "pair": "BTC-USD",
-        "price_precision": 100,
-        "token1": "BTC",
-        "token2": "USD",
-        "full_name": "Bitcoin",
-        "img": "https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085945/btc.svg",
-        "pools": [
-          {
-            "token": "USDC",
-            "options_contracts": {
-              "config": "0x73521f24ba1a42eBF75A7A8da8DBa3865fB879a1",
-              "current": "0x0BD7CF8D34e6526Ac6798d6241663393B999f337"
-            }
-          }
-        ]
-      },
-      {
-        "max_duration": "04:00",
-        "min_duration": "00:01",
-        "max_utilization": 200,
-        "category": "Crypto",
-        "tv_id": "ETHUSD",
-        "pair": "ETH-USD",
-        "price_precision": 100,
-        "token1": "ETH",
-        "token2": "USD",
-        "full_name": "Ethereum",
-        "img": "https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085945/eth.svg",
-        "pools": [
-          {
-            "token": "USDC",
-            "options_contracts": {
-              "config": "0xf8A8fFF78c89114236f1b59E6bda91A96e04C290",
-              "current": "0xdeD3eb8277C41e009B6b01dAe4937F24E7C96d72"
-            }
-          }
-        ]
-      },
-      {
-        "max_duration": "04:00",
-        "min_duration": "00:01",
-        "max_utilization": 300,
-        "category": "Forex",
-        "tv_id": "EURUSD",
-        "pair": "EUR-USD",
-        "price_precision": 1000000,
-        "token1": "EUR",
-        "token2": "USD",
-        "full_name": "Euro",
-        "img": "https://res.cloudinary.com/dtuuhbeqt/image/upload/v1684085945/euro.png",
-        "pools": [
-          {
-            "token": "USDC",
-            "options_contracts": {
-              "config": "0x00Ab4339aB8150AB34CBC57F36A66Cb6700b27E5",
-              "current": "0x2D3D330612D974Cf63dAd79Ad3Bc2160725503EC"
-            }
-          }
-        ]
-      },
-      {
-        "max_duration": "04:00",
-        "min_duration": "00:01",
-        "max_utilization": 300,
-        "category": "Forex",
-        "tv_id": "GBPUSD",
-        "pair": "GBP-USD",
-        "price_precision": 1000000,
-        "token1": "GBP",
-        "token2": "USD",
-        "full_name": "Pound",
-        "img": "https://cdn.buffer.finance/Buffer-Media/main/GBP.png",
-        "pools": [
-          {
-            "token": "USDC",
-            "options_contracts": {
-              "config": "0x40717F8Be495571Df24Fc5DF771c7dfFa3dac759",
-              "current": "0xBc6eDA5959174A7333b12088596d06A94F41Ad28"
-            }
-          }
-        ]
-      }
-    ],
+    "pairs": [],
     "graph": {
       "MAIN": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/instant-trading-arbitrum-testnet/api",
       "LITE": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/instant-trading-arbitrum-testnet/api"
