--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@ethersproject/providers": "^5.1.2",
     "@ethersproject/units": "^5.1.0",
     "@formkit/auto-animate": "^1.0.0-beta.6",
-    "@lingui/macro": "^3.17.2",
-    "@lingui/react": "^3.17.2",
+    "@lingui/macro": "^4.2.0",
+    "@lingui/react": "^4.2.0",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.3.1",
     "@mui/lab": "^5.0.0-alpha.67",
@@ -92,12 +92,14 @@
     "yarn": "^1.22.19"
   },
   "devDependencies": {
-    "@lingui/cli": "^3.17.2",
+    "@lingui/cli": "^4.2.0",
+    "@lingui/vite-plugin": "^4.2.0",
     "@types/big.js": "^6.1.6",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-plugin-macros": "^3.1.0",
     "eslint": "8.32.0",
     "postcss": "^8.4.19",
     "prettier": "^2.8.3",
