--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ VITE_ENV = TESTNET
 VITE_MODE = production
 BASE_PATH = public
 VITE_APP_TYPE = NoLoss
+VITE_SIGN_MESSAGE = Sign to verify user address
