--- a/public/config.json
+++ b/public/config.json
@@ -1174,8 +1174,8 @@
       }
     ],
     "graph": {
-      "MAIN": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/sandbox-mainnet/api",
-      "LITE": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/sandbox-mainnet/api"
+      "MAIN": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/arbitrum-mainnet/version/v0.0.14-new-version/api",
+      "LITE": "https://subgraph.satsuma-prod.com/e66b06ce96d2/bufferfinance/arbitrum-mainnet/version/v0.0.14-new-version/api"
     }
   },
   "80001": {
