--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "swr": "^1.3.0",
     "tailwind-merge": "^1.10.0",
     "typescript": "^3.7.5",
+    "viem": "^1.2.9",
     "wagmi": "^0.12.9",
     "web3": "^1.6.1",
     "websocket": "^1.0.34",
