--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,4 @@
-VITE_ENV = TESTNET
+VITE_ENV = MAINNET
 VITE_MODE = production
 BASE_PATH = public
-VITE_APP_TYPE = NoLoss
-VITE_SIGN_MESSAGE = Sign to verify user address
+VITE_WALLET_CONNECT_PROJECT_ID = 0360062041a4d5f3ebc235e4ca037e06
