--- a/.env.local
+++ b/.env.local
@@ -2,3 +2,4 @@ VITE_ENV = TESTNET
 VITE_MODE = production
 BASE_PATH = public
 VITE_WALLET_CONNECT_PROJECT_ID = 0360062041a4d5f3ebc235e4ca037e06
+VITE_SIGN_MESSAGE = Sign to verify user address
