--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
 VITE_ENV = MAINNET
 VITE_MODE = production
 BASE_PATH = public
+VITE_WALLET_CONNECT_PROJECT_ID = 0YOUR_PROJECT_ID_FROM_WALLET_CONNECT_CLOUD1
